--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "browserify-fs": "^1.0.0",
     "core-js": "^3.6.5",
+    "downloadjs": "^1.4.7",
+    "json-to-pretty-yaml": "^1.2.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
