--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "downloadjs": "^1.4.7",
     "json-to-pretty-yaml": "^1.2.2",
     "vue": "^2.6.11",
+    "vue-repeater": "^1.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
