--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-url": "^3.0.0",
     "slugify": "^1.6.0",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-repeater": "^1.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
