--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-yaml": "^4.1.0",
     "json-to-pretty-yaml": "^1.2.2",
     "json-url": "^3.0.0",
+    "rollbar": "^2.24.0",
     "slugify": "^1.6.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
