--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project
         shell: bash -e -l {0}
+        env:
+          VUE_APP_ROLLBAR_ACCESS_TOKEN: ${{ secrets.VUE_APP_ROLLBAR_ACCESS_TOKEN }}
         run: |
           nvm install
           npm install
